<resources>
    <string name="app_name">Firebase Auth App</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="are_you_already_a_member">Are you already a member?</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="email">Email</string>
    <string name="i_forgot_password">I forgot my password</string>
    <string name="or">OR</string>
    <string name="submit_new_password_link">Submit New Password Link</string>
    <string name="delete_user">Delete User</string>
    <string name="logout">Logout</string>
    <string name="update_password">Update Password</string>
    <string name="update_email">Update email</string>
    <string name="update_your_email">Update Your Email</string>
    <string name="cancel">Cancel</string>
    <string name="update_your_password">Update your password</string>
</resources>