<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Email Address" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelUser"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:background="@android:color/holo_red_light"
        android:text="@string/delete_user"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_200"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updatePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/update_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_blue_dark" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/update_email"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_blue_dark" />


    </LinearLayout>

</LinearLayout>